# tinyrom

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TINYROM_CONTRACT.md
examples/: definitions.toml  definitions.xdf  patch_copy.py  read_maps.py
src/tinyrom/: __init__.py  core.py  xdf.py
tests/: test_core.py
